--- a/scripts/analysis.ipynb
+++ b/scripts/analysis.ipynb
@@ -319,9 +319,35 @@
     "    intra_lib.rename(columns={\"intra_similarity\": \"lib\"}),\n",
     "    on=\"period\",\n",
     ")\n",
-    "p_echo = stats.ttest_rel(merged[\"con\"], merged[\"lib\"]).pvalue\n",
-    "print(f\"Q3: Intra-group similarity difference p-value = {p_echo:.3g}\")\n",
     "\n",
+    "def freq_df(df, topics):\n",
+    "    return (\n",
+    "        pd.DataFrame({\"timestamp\": df[\"timestamp\"], \"topic\": topics})\n",
+    "        .assign(\n",
+    "            period=lambda d: d[\"timestamp\"]\n",
+    "            .dt.to_period(cfg[\"analysis\"][\"time_interval\"])\n",
+    "            .dt.to_timestamp()\n",
+    "        )\n",
+    "        .groupby([\"period\", \"topic\"])\n",
+    "        .size()\n",
+    "        .reset_index(name=\"count\")\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "cons_freq = freq_df(cons_df, cons_topics)\n",
+    "lib_freq = freq_df(lib_df, lib_topics)\n",
+    "cons_freq[\"topic_label\"] = cons_freq[\"topic\"].map(cons_labels)\n",
+    "lib_freq[\"topic_label\"] = lib_freq[\"topic\"].map(lib_labels)\n",
+    "\n",
+    "top_n = cfg.get(\"analysis\", {}).get(\"top_n\", 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Visualizations\n",
     "viz = Visualizer(outdir)\n",
     "viz.plot_time_series(\n",
@@ -395,27 +421,6 @@
     "    filename=\"intra_lib.png\",\n",
     ")\n",
     "\n",
-    "\n",
-    "def freq_df(df, topics):\n",
-    "    return (\n",
-    "        pd.DataFrame({\"timestamp\": df[\"timestamp\"], \"topic\": topics})\n",
-    "        .assign(\n",
-    "            period=lambda d: d[\"timestamp\"]\n",
-    "            .dt.to_period(cfg[\"analysis\"][\"time_interval\"])\n",
-    "            .dt.to_timestamp()\n",
-    "        )\n",
-    "        .groupby([\"period\", \"topic\"])\n",
-    "        .size()\n",
-    "        .reset_index(name=\"count\")\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "cons_freq = freq_df(cons_df, cons_topics)\n",
-    "lib_freq = freq_df(lib_df, lib_topics)\n",
-    "cons_freq[\"topic_label\"] = cons_freq[\"topic\"].map(cons_labels)\n",
-    "lib_freq[\"topic_label\"] = lib_freq[\"topic\"].map(lib_labels)\n",
-    "\n",
-    "top_n = cfg.get(\"analysis\", {}).get(\"top_n\", 5)\n",
     "viz.plot_topic_prevalence(\n",
     "    cons_freq,\n",
     "    period_col=\"period\",\n",
